# perch

./: Cargo.toml  README.md  install.sh  justfile
.github/workflows/: release.yml
scripts/: bump
src/: cli.rs  config.rs  context.rs  main.rs  stow.rs  utils.rs
src/commands/: add.rs  mod.rs  move_dir.rs  self_upgrade.rs  status.rs  sync.rs  update.rs
