[package]
name = "perch"
version = "0.9.1"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
ignore = "0.4.28"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
walkdir = "2.5.0"

[profile.release]
strip = true        # strips debug symbols — biggest win
opt-level = "z"    # optimize for size instead of speed
lto = true         # link-time optimization, removes dead code
codegen-units = 1  # slower compile, better optimization
panic = "abort"    # removes unwinding machinery
